# SyclParallelSTL

./: CMakeLists.txt  README.md
.circleci/: config.yml
examples/: CMakeLists.txt  sycl_sample_01.cpp
include/: ZipIterator.hpp
include/sycl/: execution_policy
include/sycl/algorithm/: adjacent_difference.hpp  buffer_algorithms.hpp  copy.hpp  copy_if.hpp  count_if.hpp  equal.hpp  exclusive_scan.hpp  fill.hpp  find.hpp  for_each.hpp  for_each_n.hpp  gather.hpp  generate.hpp  inclusive_scan.hpp  inner_product.hpp  iota.hpp  mismatch.hpp  reduce.hpp  reduce_by_key.hpp  replace_copy_if.hpp  replace_if.hpp  reverse.hpp  reverse_copy.hpp  rotate.hpp  rotate_copy.hpp  scatter_if.hpp  sort.hpp  transform.hpp  transform_if.hpp  transform_reduce.hpp
include/sycl/container/: device_vector.hpp
include/sycl/helpers/: sycl_buffers.hpp  sycl_default_variables.hpp  sycl_device_allocator.hpp  sycl_device_iterator.hpp  sycl_device_pointer.hpp  sycl_device_value.hpp  sycl_differences.hpp  sycl_namegen.hpp  sycl_usm_vector.hpp
tests/pstl-tests/: CMakeLists.txt  all_of.cpp  any_of.cpp  copy_if.cpp  count.cpp  count_if.cpp  equal.cpp  exclusive_scan.cpp  fill.cpp  fill_n.cpp  find.cpp  for_each.cpp  for_each_n.cpp  generate.cpp  generate_n.cpp  inclusive_scan.cpp  inner_product.cpp  invalid_vector_iterators.cpp  mismatch.cpp  none_of.cpp  reduce.cpp  reduce_by_key.cpp  replace.cpp  replace_copy.cpp  replace_copy_if.cpp  replace_if.cpp  reverse.cpp  reverse_copy.cpp  rotate.cpp  rotate_copy.cpp  sort.cpp  transform.cpp  transform_reduce.cpp
